--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "lucide-react": "^0.453.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
@@ -22,6 +25,8 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sequelize": "^6.37.4",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,6 +61,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.47",
