--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.13.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sequelize": "^6.37.4",
