feat: emails, only contact for now

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-JWT_SECRET=vintacci_secret_key_2024
+JWT_SECRET='vintacci_secret_key_2024'
+SENDGRID_API_KEY='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'
+SENDGRID_FROM_EMAIL='franchi13579@gmail.com'
+SENDGRID_FROM_NAME='Vintacci'
+CONTACT_EMAIL='franchi13579@gmail.com'
+FRONTEND_URL='http://localhost:3000/'
