--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@radix-ui/react-slider": "^1.2.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@sendgrid/mail": "^8.1.4",
     "@testing-library/jest-dom": "^5.17.0",
