--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sequelize": "^6.37.4",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
